--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="image-container">
 
                     <br>
-                    <img src="src="https://github.com/DuPont9029/LeLadderProject/blob/main/miodioquanto%C3%A8brutto-removebg-preview.png?raw=true" class="distanziamentos">
+                    <img src="https://github.com/DuPont9029/LeLadderProject/blob/main/miodioquanto%C3%A8brutto-removebg-preview.png?raw=true" class="distanziamentos">
 
                 </div>
                 <div class="distanziamentos">
