--- a/lostemmadelafamiglia.html
+++ b/lostemmadelafamiglia.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Lo Stemma</title>
-        <link rel="stylesheet" type="text/css" href="https://github.com/DuPont9029/LeLadderProject/blob/bccc5ca530c879881dc1835b6b8b38de86b00792/holycss.css">
+        <link rel="stylesheet" type="text/css" href="holycss.css">
         <script src="idellascala.js"></script>
     </head>
 
