--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
             <div id="nav">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="https://dupont9029.github.io/LeLadderProject/index.html">Home</a></li>
                     <li><a href="https://dupont9029.github.io/LeLadderProject/lostemmadelafamiglia.html">Lo Stemma Della Famiglia</a></li>
                     <li><a href="htmlpages/lanascita.html">la nascita della famiglia</a></li>
                     <li><a href="htmlpages/membristorici.html">membri storici della famiglia</a></li>
