--- a/lostemmadelafamiglia.html
+++ b/lostemmadelafamiglia.html
@@ -13,11 +13,11 @@
 
             <div id="nav">
                 <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="lostemmadelafamiglia.html">Lo stemma</a></li>
-                    <li><a href="htmlpages/lanascita.html">la nascita della famiglia</a></li>
-                    <li><a href="htmlpages/membristorici.html">membri storici della famiglia</a></li>
-                    <li><a href="htmlpages/azionisvolte.html">azioni svolte</a></li>
+                    <li><a href="https://dupont9029.github.io/LeLadderProject/index.html">Home</a></li>
+                    <li><a href="https://dupont9029.github.io/LeLadderProject/lostemmadelafamiglia.html">Lo stemma</a></li>
+                    <li><a href="https://dupont9029.github.io/LeLadderProject/lanascita.html">la nascita della famiglia</a></li>
+                    <li><a href="https://dupont9029.github.io/LeLadderProject/membristorici.html">membri storici della famiglia</a></li>
+                    <li><a href="https://dupont9029.github.io/LeLadderProject/azionisvolte.html">azioni svolte</a></li>
                 </ul>
             </div>
         </div>
