--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
                 <div class="image-container">
 
                     <br>
-                    <img src="https://github.com/DuPont9029/LeLadderProject/blob/main/miodioquanto%C3%A8brutto-removebg-preview.png?raw=true" class="distanziamentos">
+                    <img src="https://github.com/DuPont9029/LeLadderProject/blob/main/download-removebg-preview.png?raw=true" class="distanziamentos">
 
                 </div>
                 <div class="distanziamentos">
                     <div class="distanziamentoso">
-                        <img src="immaginia/miodioquantoèbrutto-removebg-preview.png" class="distanziamentoso">
+                        <img src="https://github.com/DuPont9029/LeLadderProject/blob/main/miodioquanto%C3%A8brutto-removebg-preview.png?raw=true" class="distanziamentoso">
                     </div>
                 </div>
             </div>
