--- a/lostemmadelafamiglia.html
+++ b/lostemmadelafamiglia.html
@@ -46,33 +46,33 @@
                 <div class="image-container">
 
                     <br>
-                    <img src="/Html/idellascala/immaginia/stemma1.jpg" class="distanziamentos">
+                    <img src="https://github.com/DuPont9029/LeLadderProject/blob/main/stemma1.jpg?raw=true" class="distanziamentos">
 
                 </div>
 
                 <div class="distanziamentos">
                     <div class="distanziamentoso">
-                        <img src="/Html/idellascala/immaginia/stemma2.jpg" class="distanziamentoso">
+                        <img src="https://github.com/DuPont9029/LeLadderProject/blob/main/stemma2.jpg?raw=true" class="distanziamentoso">
                     </div>
                 </div>
 
                 <div class="image-container">
 
                     <br>
-                    <img src="/Html/idellascala/immaginia/stemma3.jpg" class="distanziamentos">
+                    <img src="https://github.com/DuPont9029/LeLadderProject/blob/main/stemma3.jpg?raw=true" class="distanziamentos">
 
                 </div>
 
                 <div class="distanziamentos">
                     <div class="distanziamentoso">
-                        <img src="/Html/idellascala/immaginia/stemma4.png" class="distanziamentoso">
+                        <img src="https://github.com/DuPont9029/LeLadderProject/blob/main/stemma4.jpg?raw=true" class="distanziamentoso">
                     </div>
                 </div>
 
                 <div class="image-container">
 
                     <br>
-                    <img src="/Html/idellascala/immaginia/stemma5.jpg" class="distanziamentos">
+                    <img src="https://github.com/DuPont9029/LeLadderProject/blob/main/stemma5.jpg?raw=true" class="distanziamentos">
 
                 </div>
                 
