--- a/lostemmadelafamiglia.html
+++ b/lostemmadelafamiglia.html
@@ -65,7 +65,7 @@
 
                 <div class="distanziamentos">
                     <div class="distanziamentoso">
-                        <img src="https://github.com/DuPont9029/LeLadderProject/blob/main/stemma4.jpg?raw=true" class="distanziamentoso">
+                        <img src="https://github.com/DuPont9029/LeLadderProject/blob/main/stemma4.png?raw=true" class="distanziamentoso">
                     </div>
                 </div>
 
