--- a/lanascita.html
+++ b/lanascita.html
@@ -26,7 +26,7 @@
         <div id="content">
             <div id="feature">
                 <p class="titolo">La nascita della famiglia</p>
-                <p class="titolino">by D.N</p>
+                <p class="titolino">by D.N && M.C</p>
             </div>
             
             <div class="article column1">
@@ -77,6 +77,16 @@
                     tendendo la mano anche alle famiglie guelfe che si erano sempre opposte al governo ghibellino della città. 
                     Tuttavia, nel 1277, Mastino fu assassinato nel buio e angusto vicolo d'accesso al palazzo di famiglia, 
                     dove oggi sorgono le case Mazzanti in piazza Erbe.
+                    La Signoria dei Della Scala governò Verona dal 1262 al 1387. 
+                    Durante il loro governo, Verona diventò una città importante per la cultura, l'arte e il commercio. 
+                    I Della Scala erano molto interessati alla cultura e all'arte e commissionavano opere a grandi artisti. 
+                    Inoltre, hanno costruito molte strutture architettoniche come chiese e logge. 
+                    Hanno anche aiutato le famiglie povere e creato la prima forma di assistenza sociale in Italia. 
+                    I Della Scala erano molto appassionati della musica e promuovevano la creazione di nuove opere. 
+                    Cangrande II ha anche creato il primo ospedale psichiatrico in Europa. 
+                    I Della Scala erano anche abili guerrieri e hanno creato uno stato italiano molto forte. 
+                    Durante il loro governo, Verona ha avuto un periodo di pace e prosperità, con un forte sviluppo delle arti e della cultura. 
+                    La dinastia dei Della Scala ha lasciato un importante patrimonio culturale e artistico alla città di Verona e all'Italia.
             </div>
             </div>
 
